--- a/src/styles/cfg/_common.scss
+++ b/src/styles/cfg/_common.scss
@@ -1,4 +1,5 @@
 @import 'mixin';
+@import '../fonts/fonts';
 
 * {
     box-sizing: border-box;
@@ -6,6 +7,7 @@
 
 :root {
     --primary-color: #116ACC;
+    --gray-7: #F3F4F6;
 }
 
 body,
@@ -13,7 +15,7 @@ html {
     @include clearStyles;
     min-width: 320px;
     font-size: 16px;
-    // font-family: 'Montserrat', sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     // color: $blackColor;
 }
