--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,4 +2,26 @@
     background-color: var(--primary-color);
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
     padding: 25px 0;
+    &__wrap {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &-list {
+        display: flex;
+      }
+      &-item {
+        &-button {
+          padding: 16px 24px;
+          border-radius: 7px;
+          font-family: 'Ubuntu';
+          font-weight: 500;
+          font-size: 16px;
+          color: var(--primary-color);
+          background-color: var(--white-color);
+        }
+        &:not(:last-child) {
+          margin-right: 25px;
+        }
+      }
+    }
 }
