added new pages

--- a/src/styles/atms/index.css
+++ b/src/styles/atms/index.css
@@ -182,187 +182,11 @@ p, h2, h3 {
   margin-right: 25px;
 }
 
-.main__panel {
-  margin-bottom: 50px;
+.main__wrap {
   padding-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .main__panel-title {
-  margin-bottom: 30px;
-}
-
-.main__panel-number {
-  font-size: 34px;
-}
-
-.main__panel-button {
-  margin-bottom: 30px;
-  padding: 16px 24px 16px 58px;
-  font-size: 16px;
-  font-family: 'Ubuntu';
-  color: var(--white-color);
-  background-color: var(--primary-color);
-  background-image: url("/src/img/arrow-button.svg");
-  background-repeat: no-repeat;
-  background-position: 25px 20px;
-  border-radius: 7px;
-}
-
-.main__panel-balance {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.main__panel-balance span {
-  margin-left: 50px;
-  font-weight: 400;
-}
-
-.main__info {
   margin-bottom: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.main__info-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 606px;
-  padding: 25px 25px 25px 50px;
-  border-radius: 50px;
-  background-color: var(--gray-7);
-}
-
-.main__info-form-title {
-  margin-bottom: 25px;
-  font-family: 'Work Sans';
-  font-size: 20px;
-}
-
-.main__info-form-label {
-  margin-bottom: 25px;
-  -ms-flex-item-align: end;
-      -ms-grid-row-align: end;
-      align-self: end;
-  margin-right: 18px;
-  font-family: 'Ubuntu';
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.main__info-form-input {
-  margin-left: 18px;
-  width: 300px;
-  padding: 10px 16px;
-  font-family: 'Ubuntu';
-  border-radius: 7px;
-  background-color: var(--white-color);
-}
-
-.main__info-form-input::-webkit-input-placeholder {
-  color: var(--gray-4);
-}
-
-.main__info-form-input:-ms-input-placeholder {
-  color: var(--gray-4);
-}
-
-.main__info-form-input::-ms-input-placeholder {
-  color: var(--gray-4);
-}
-
-.main__info-form-input::placeholder {
-  color: var(--gray-4);
-}
-
-.main__info-form-button {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  padding: 16px 24px 16px 58px;
-  font-size: 16px;
-  font-family: 'Ubuntu';
-  color: var(--white-color);
-  background-color: var(--primary-color);
-  background-image: url("/src/img/mail.svg");
-  background-repeat: no-repeat;
-  background-position: 25px 18px;
-  border-radius: 7px;
-  -webkit-transform: translateX(28px);
-          transform: translateX(28px);
-}
-
-.main__info-chart {
-  width: 684px;
-  padding: 25px 50px;
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-  border-radius: 50px;
-}
-
-.main__history {
-  padding: 25px 50px 66px;
-  border-radius: 50px;
-  background-color: var(--gray-7);
-}
-
-.main__history-title {
-  margin-bottom: 25px;
-  font-family: 'Work Sans';
-  font-size: 20px;
-}
-
-.main__history-list .list-titles {
-  border-radius: 15px;
-  background-color: var(--primary-color);
-  font-family: 'Ubuntu';
-  font-weight: 500;
-  font-size: 20px;
-  color: var(--white-color);
-}
-
-.main__history-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 20px 50px;
-  border-bottom: 2px solid rgba(0, 82, 255, 0.1);
-  cursor: pointer;
-}
-
-.main__history-item-text, .main__history-item-title {
-  width: 300px;
-}
-
-.main__history-item-text:nth-child(3), .main__history-item-title:nth-child(3) {
-  width: 150px;
-}
-
-.main__history-item-text {
-  font-size: 16px;
-  color: var(--gray-2);
-}
-
-.main__history-item .adding {
-  color: var(--green-color);
-}
-
-.main__history-item .decrease {
-  color: var(--red-color);
 }
 /*# sourceMappingURL=index.css.map */
