--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -18,6 +18,10 @@
           font-size: 16px;
           color: var(--primary-color);
           background-color: var(--white-color);
+          &:disabled {
+            background-color: var(--primary-hover) !important;
+            cursor: default;
+          }
         }
         &:not(:last-child) {
           margin-right: 25px;
