--- a/src/styles/authorization/index.css
+++ b/src/styles/authorization/index.css
@@ -58,6 +58,7 @@
 }
 
 :root {
+  --black-color: #000000;
   --white-color: #FFFFFF;
   --primary-color: #116ACC;
   --primary-hover: #A0C3FF;
@@ -137,11 +138,6 @@ p, h2, h3 {
   font-size: 34px;
 }
 
-.disabled-button {
-  background-color: var(--primary-hover) !important;
-  cursor: default;
-}
-
 .header {
   background-color: var(--primary-color);
   -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
@@ -175,6 +171,11 @@ p, h2, h3 {
   font-size: 16px;
   color: var(--primary-color);
   background-color: var(--white-color);
+}
+
+.header__wrap-item-button:disabled {
+  background-color: var(--primary-hover) !important;
+  cursor: default;
 }
 
 .header__wrap-item:not(:last-child) {
