--- a/src/styles/cfg/_common.scss
+++ b/src/styles/cfg/_common.scss
@@ -7,6 +7,7 @@
 }
 
 :root {
+    --black-color: #000000;
     --white-color: #FFFFFF;
     --primary-color: #116ACC;
     --primary-hover: #A0C3FF;
@@ -74,9 +75,4 @@ p, h2, h3 {
 .title {
     font-weight: 700;
     font-size: 34px;
-}
-
-.disabled-button {
-  background-color: var(--primary-hover) !important;
-  cursor: default;
 }
