--- a/src/styles/authorization/index.css
+++ b/src/styles/authorization/index.css
@@ -124,6 +124,7 @@ ul {
 input,
 button {
   border: none;
+  outline: none;
   background-color: transparent;
   cursor: pointer;
 }
@@ -131,6 +132,11 @@ button {
 p, h2, h3 {
   margin: 0;
   padding: 0;
+}
+
+button:disabled {
+  background-color: var(--primary-hover) !important;
+  cursor: default;
 }
 
 .title {
@@ -224,6 +230,7 @@ p, h2, h3 {
   border: 1px solid var(--gray-5);
   background-color: var(--white-color);
   font-family: 'Ubuntu';
+  outline: none;
 }
 
 .main__form-input::-webkit-input-placeholder {
@@ -242,6 +249,10 @@ p, h2, h3 {
   color: var(--gray-4);
 }
 
+.main__form-input.error-field {
+  border-color: var(--red-color);
+}
+
 .main__form-link {
   display: inline-block;
   -ms-flex-item-align: start;
@@ -253,5 +264,10 @@ p, h2, h3 {
   font-size: 14px;
   background-color: var(--primary-color);
   color: var(--white-color);
+}
+
+.main__form-link.disabled {
+  pointer-events: none;
+  background-color: var(--primary-hover);
 }
 /*# sourceMappingURL=index.css.map */
