--- a/src/styles/account/_main.scss
+++ b/src/styles/account/_main.scss
@@ -81,10 +81,41 @@
       }
     }
     &-chart {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
       width: 684px;
       padding: 25px 50px;
       box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
       border-radius: 50px;
+      &-title {
+        font-family: 'Work Sans';
+        font-size: 20px;
+      }
+      &-year {
+        font-size: 10px;
+        cursor: pointer;
+        &-list {
+          display: flex;
+          align-items: center;
+        }
+        &.active {
+          font-size: 12px;
+          position: relative;
+          &::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: var(--black-color);
+          }
+        }
+        &:not(:last-child) {
+          margin-right: 10px;
+        }
+      }
     }
   }
   &__history {
