--- a/src/styles/account/index.css
+++ b/src/styles/account/index.css
@@ -314,11 +314,57 @@ button:disabled {
 }
 
 .main__info-chart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 684px;
   padding: 25px 50px;
   -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
   border-radius: 50px;
+}
+
+.main__info-chart-title {
+  font-family: 'Work Sans';
+  font-size: 20px;
+}
+
+.main__info-chart-year {
+  font-size: 10px;
+  cursor: pointer;
+}
+
+.main__info-chart-year-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main__info-chart-year.active {
+  font-size: 12px;
+  position: relative;
+}
+
+.main__info-chart-year.active::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--black-color);
+}
+
+.main__info-chart-year:not(:last-child) {
+  margin-right: 10px;
 }
 
 .main__history {
