--- a/src/assets/public/currency/currency.css
+++ b/src/assets/public/currency/currency.css
@@ -134,6 +134,30 @@ p, h2, h3 {
   padding: 0;
 }
 
+button.loading {
+  position: relative;
+  color: transparent;
+  background-color: var(--primary-hover);
+  background-image: none;
+  pointer-events: none;
+  cursor: default;
+}
+
+button.loading:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 40%;
+  width: 20px;
+  height: 20px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 3px solid var(--white-color);
+  border-color: var(--white-color) transparent var(--white-color) transparent;
+  -webkit-animation: button-loading 1.2s linear infinite;
+          animation: button-loading 1.2s linear infinite;
+}
+
 button:disabled {
   background-color: var(--primary-hover) !important;
   cursor: default;
@@ -142,6 +166,65 @@ button:disabled {
 .title {
   font-weight: 700;
   font-size: 34px;
+}
+
+.skeleton {
+  opacity: .7;
+  -webkit-animation: skeleton-loading 1s linear infinite alternate;
+          animation: skeleton-loading 1s linear infinite alternate;
+}
+
+.skeleton-title {
+  height: 40px;
+}
+
+.skeleton-text {
+  height: 24px;
+}
+
+.skeleton-title, .skeleton-text {
+  width: 100%;
+  border-radius: 7px;
+}
+
+@-webkit-keyframes skeleton-loading {
+  0% {
+    background-color: var(--gray-7);
+  }
+  100% {
+    background-color: var(--white-color);
+  }
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: var(--gray-7);
+  }
+  100% {
+    background-color: var(--white-color);
+  }
+}
+
+@-webkit-keyframes button-loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes button-loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 .header {
@@ -273,6 +356,12 @@ button:disabled {
   font-size: 20px;
 }
 
+.main__yourcurrency.skeleton {
+  height: 919px;
+  -webkit-box-shadow: unset;
+          box-shadow: unset;
+}
+
 .main__exchange {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -359,6 +448,12 @@ button:disabled {
   padding: 13px 16px 10px;
   border: 1px solid var(--gray-5);
   border-radius: 7px;
+}
+
+.main__exchange.skeleton {
+  height: 258px;
+  -webkit-box-shadow: unset;
+          box-shadow: unset;
 }
 
 .main__right-column {
