--- a/src/assets/public/index/_main.scss
+++ b/src/assets/public/index/_main.scss
@@ -1,7 +1,6 @@
 .main {
-    &__wrap {
-        padding: 262px 0;
-    }
+  padding-top: 262px;
+  padding-bottom: 262px;
     &__form {
         margin: 0 auto;
         display: flex;
@@ -52,4 +51,27 @@
             }
         }
     }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    padding-top: 150px;
+    padding-bottom: 150px;
+    &__form {
+      width: 100%;
+      padding: 40px;
+      &-title {
+        text-align: center;
+      }
+      &-label {
+        align-self: unset;
+        transform: unset;
+      }
+      &-input {
+        width: 100%;
+        margin-top: 10px;
+        margin-left: 0;
+      }
+    }
+  }
 }
