--- a/src/assets/public/_config/_common.scss
+++ b/src/assets/public/_config/_common.scss
@@ -168,6 +168,9 @@ button {
 .title {
     font-weight: 700;
     font-size: 34px;
+    @media only screen and (max-width:768px) {
+      font-size: 24px;
+    }
 }
 
 .skeleton {
