--- a/src/assets/public/atms/_main.scss
+++ b/src/assets/public/atms/_main.scss
@@ -1,10 +1,15 @@
 .main {
-  &__wrap {
-    padding-top: 50px;
-  }
+  padding-top: 50px;
+  padding-bottom: 50px;
   &__panel {
     &-title {
       margin-bottom: 50px;
     }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #map {
+    height: 320px !important;
   }
 }
