--- a/src/assets/public/currency/_main.scss
+++ b/src/assets/public/currency/_main.scss
@@ -1,7 +1,6 @@
 .main {
-  &__wrap {
-    padding-top: 50px;
-  }
+  padding-top: 50px;
+  padding-bottom: 50px;
   &__title {
     margin-bottom: 56px;
     font-weight: 700;
@@ -223,6 +222,99 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1366px) {
+  .main {
+    &__columns {
+      flex-direction: column-reverse;
+    }
+    &__left-column {
+      min-width: unset;
+      width: 100%;
+    }
+    &__right-column {
+      margin-bottom: 50px;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    &__right {
+      &-column {
+        &-list {
+          li {
+            .left {
+              width: 45%;
+              font-size: 14px;
+            }
+            .right {
+              font-size: 14px;
+              &:after {
+                right: -20px;
+              }
+            }
+            &.up {
+              .right {
+                &::after {
+                  bottom: 3px;
+                }
+              }
+            }
+            &.down {
+              .right {
+                &::after {
+                  top: 5px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    &__yourcurrency {
+      &-list {
+        li {
+          .left {
+            width: 45%;
+            font-size: 14px;
+          }
+          .right {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+    &__exchange {
+      &-left {
+        width: 100%;
+        flex-direction: column;
+      }
+      &-label {
+        flex-direction: column;
+        align-items: flex-start;
+        &:not(:last-child) {
+          margin-right: 0;
+        }
+        .choices {
+          width: 100%;
+          margin-top: 10px;
+          margin-left: 0;
+        }
+      }
+      &-input {
+        width: 100%;
+        margin-top: 10px;
+        margin-left: 0;
+        margin-bottom: 25px;
+      }
+      &-button {
+        padding: 20px;
+        width: 100%;
       }
     }
   }
