--- a/src/assets/public/currency/currency.css
+++ b/src/assets/public/currency/currency.css
@@ -168,6 +168,12 @@ button:disabled {
   font-size: 34px;
 }
 
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
 .skeleton {
   opacity: .7;
   -webkit-animation: skeleton-loading 1s linear infinite alternate;
@@ -227,52 +233,9 @@ button:disabled {
   }
 }
 
-.header {
-  background-color: var(--primary-color);
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-  padding: 25px 0;
-}
-
-.header__wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.header__wrap-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header__wrap-item-button {
-  padding: 16px 24px;
-  border-radius: 7px;
-  font-family: 'Ubuntu';
-  font-weight: 500;
-  font-size: 16px;
-  color: var(--primary-color);
-  background-color: var(--white-color);
-}
-
-.header__wrap-item-button:disabled {
-  background-color: var(--primary-hover) !important;
-  cursor: default;
-}
-
-.header__wrap-item:not(:last-child) {
-  margin-right: 25px;
-}
-
-.main__wrap {
+.main {
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .main__title {
@@ -541,5 +504,81 @@ button:disabled {
 .main__right-column-list li.down .right::after {
   top: 7px;
   border-top: 10px solid var(--red-color);
+}
+
+@media only screen and (max-width: 1366px) {
+  .main__columns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .main__left-column {
+    min-width: unset;
+    width: 100%;
+  }
+  .main__right-column {
+    margin-bottom: 50px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .main__right-column-list li .left {
+    width: 45%;
+    font-size: 14px;
+  }
+  .main__right-column-list li .right {
+    font-size: 14px;
+  }
+  .main__right-column-list li .right:after {
+    right: -20px;
+  }
+  .main__right-column-list li.up .right::after {
+    bottom: 3px;
+  }
+  .main__right-column-list li.down .right::after {
+    top: 5px;
+  }
+  .main__yourcurrency-list li .left {
+    width: 45%;
+    font-size: 14px;
+  }
+  .main__yourcurrency-list li .right {
+    font-size: 14px;
+  }
+  .main__exchange-left {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .main__exchange-label {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .main__exchange-label:not(:last-child) {
+    margin-right: 0;
+  }
+  .main__exchange-label .choices {
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+  .main__exchange-input {
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+    margin-bottom: 25px;
+  }
+  .main__exchange-button {
+    padding: 20px;
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=currency.css.map */
