--- a/src/assets/public/index/index.css
+++ b/src/assets/public/index/index.css
@@ -168,6 +168,12 @@ button:disabled {
   font-size: 34px;
 }
 
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
 .skeleton {
   opacity: .7;
   -webkit-animation: skeleton-loading 1s linear infinite alternate;
@@ -227,52 +233,9 @@ button:disabled {
   }
 }
 
-.header {
-  background-color: var(--primary-color);
-  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
-  padding: 25px 0;
-}
-
-.header__wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.header__wrap-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header__wrap-item-button {
-  padding: 16px 24px;
-  border-radius: 7px;
-  font-family: 'Ubuntu';
-  font-weight: 500;
-  font-size: 16px;
-  color: var(--primary-color);
-  background-color: var(--white-color);
-}
-
-.header__wrap-item-button:disabled {
-  background-color: var(--primary-hover) !important;
-  cursor: default;
-}
-
-.header__wrap-item:not(:last-child) {
-  margin-right: 25px;
-}
-
-.main__wrap {
-  padding: 262px 0;
+.main {
+  padding-top: 262px;
+  padding-bottom: 262px;
 }
 
 .main__form {
@@ -352,5 +315,31 @@ button:disabled {
 .main__form-link.disabled {
   pointer-events: none;
   background-color: var(--primary-hover);
+}
+
+@media only screen and (max-width: 768px) {
+  .main {
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+  .main__form {
+    width: 100%;
+    padding: 40px;
+  }
+  .main__form-title {
+    text-align: center;
+  }
+  .main__form-label {
+    -ms-flex-item-align: unset;
+        -ms-grid-row-align: unset;
+        align-self: unset;
+    -webkit-transform: unset;
+            transform: unset;
+  }
+  .main__form-input {
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+  }
 }
 /*# sourceMappingURL=index.css.map */
