--- a/src/assets/components/showMessage/_showMessage.scss
+++ b/src/assets/components/showMessage/_showMessage.scss
@@ -26,3 +26,10 @@
   margin-bottom: 10px;
   font-size: 16px;
 }
+
+@media only screen and (max-width: 450px) {
+  .message {
+    width: 300px;
+    right: 10px;
+  }
+}
