--- a/src/assets/public/_config/_common.scss
+++ b/src/assets/public/_config/_common.scss
@@ -22,65 +22,36 @@
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.woff2') format('woff2'),
+       url('../_config/fonts/work-sans-v16-latin-ext_latin-regular.woff') format('woff'),
 }
-/* work-sans-500 - latin-ext_latin */
 @font-face {
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 500;
-  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-500.woff2') format('woff2'),
+       url('../_config/fonts/work-sans-v16-latin-ext_latin-500.woff') format('woff'),
 }
-/* work-sans-700 - latin-ext_latin */
 @font-face {
   font-family: 'Work Sans';
   font-style: normal;
   font-weight: 700;
-  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url('../_config/fonts/work-sans-v16-latin-ext_latin-700.woff2') format('woff2'),
+       url('../_config/fonts/work-sans-v16-latin-ext_latin-700.woff') format('woff'),
 }
-/* ubuntu-regular - latin-ext_latin_cyrillic-ext_cyrillic */
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
-  src: url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.svg#Ubuntu') format('svg'); /* Legacy iOS */
+  src: url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.woff2') format('woff2'),
+       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-regular.woff') format('woff'),
 }
-/* ubuntu-500 - latin-ext_latin_cyrillic-ext_cyrillic */
 @font-face {
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 500;
-  src: url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.woff') format('woff'), /* Modern Browsers */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.svg#Ubuntu') format('svg'); /* Legacy iOS */
+  src: url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.woff2') format('woff2'),
+       url('../_config/fonts/ubuntu-v19-latin-ext_latin_cyrillic-ext_cyrillic-500.woff') format('woff'),
 }
 
 body,
